--- a/files/.ssh/config
+++ b/files/.ssh/config
@@ -1,3 +1,61 @@
 ControlMaster auto
 ControlPath /tmp/ssh_mux_%h_%p_%r
 ControlPersist 15m
+
+Host mercury
+  HostName mercury.cites.illinois.edu
+  User wingram2
+
+Host minerva
+  HostName minerva.cites.illinois.edu
+  User wingram2
+
+Host sau
+  HostName sau.cites.illinois.edu
+  User wingram2
+
+Host luk
+  HostName luk.cites.illinois.edu
+
+Host sophia
+  HostName sophia.cites.illinois.edu
+
+Host athena
+  HostName athena.cites.illinois.edu
+
+Host juno
+  HostName juno.cites.illinois.edu
+
+Host ceres
+  HostName ceres.cites.illinois.edu
+
+Host uic1
+  HostName vireo-lib-1.cc.uic.edu
+
+Host uic2
+  HostName vireo-lib-2.cc.uic.edu
+
+Host djatoka
+  HostName djatoka.grainger.uiuc.edu
+
+Host bamboo
+  HostName ramman.grainger.uiuc.edu
+
+Host oreo
+  HostName oreo.grainger.uiuc.edu
+
+Host jenkins
+  HostName camazotz.grainger.uiuc.edu
+  User wingram2
+
+Host medusatest
+  HostName dagda.grainger.uiuc.edu
+  User root
+
+Host medusa
+  Hostname stribog.grainger.uiuc.edu
+  User root
+
+Host blog
+  HostName bill-ingram.com
+  User waingram
