--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,6 @@ files/.ssh/known_hosts
 files/.emacs.d/auto-save-list/*
 files/.emacs.d/backups/*
 files/.emacs.d/elpa/*
-files/.emacs.d/places/*
+files/.emacs.d/places
 files/.emacs.d/session.*
 files/.emacs.d/.smex-items
