--- a/files/.gitconfig
+++ b/files/.gitconfig
@@ -25,7 +25,7 @@
         diff = auto
         status = auto
         branch = auto
-        ui = true
+        ui = always
 [help]
         autocorrect = 1
 [status]
