clean up ssh config

--- a/files/.ssh/config
+++ b/files/.ssh/config
@@ -1,61 +1,46 @@
 ControlMaster auto
 ControlPath /tmp/ssh_mux_%h_%p_%r
-ControlPersist 15m
+ControlPersist 4h
 
-Host mercury
-  HostName mercury.cites.illinois.edu
-  User wingram2
+### IDEALS
+Host sau luk
+  HostName %h.cites.illinois.edu
 
-Host minerva
-  HostName minerva.cites.illinois.edu
-  User wingram2
+### ETD
+Host mercury minerva
+  HostName %h.cites.illinois.edu
 
-Host sau
-  HostName sau.cites.illinois.edu
-  User wingram2
+### Connections
+Host sophia athena
+  HostName %h.cites.illinois.edu
 
-Host luk
-  HostName luk.cites.illinois.edu
+#### Wiki
+Host juno ceres nidavell nidavell-dev
+  HostName %h.cites.illinois.edu
 
-Host sophia
-  HostName sophia.cites.illinois.edu
-
-Host athena
-  HostName athena.cites.illinois.edu
-
-Host juno
-  HostName juno.cites.illinois.edu
-
-Host ceres
-  HostName ceres.cites.illinois.edu
-
+### UIC ETD
 Host uic1
   HostName vireo-lib-1.cc.uic.edu
 
 Host uic2
   HostName vireo-lib-2.cc.uic.edu
 
-Host djatoka
-  HostName djatoka.grainger.uiuc.edu
+### Grainger
+Host djatoka bamboo oreo
+  HostName %h.grainger.uiuc.edu
 
-Host bamboo
-  HostName ramman.grainger.uiuc.edu
-
-Host oreo
-  HostName oreo.grainger.uiuc.edu
-
+### Jenkins
 Host jenkins
   HostName camazotz.grainger.uiuc.edu
-  User wingram2
+ 
+### Medusa
+Host medusa
+  Hostname stribog.grainger.uiuc.edu
 
 Host medusatest
   HostName dagda.grainger.uiuc.edu
-  User root
 
-Host medusa
-  Hostname stribog.grainger.uiuc.edu
-  User root
-
+### Personal
 Host blog
   HostName bill-ingram.com
   User waingram
