various and sundry

--- a/files/.ssh/config
+++ b/files/.ssh/config
@@ -40,6 +40,9 @@ Host medusa
 Host medusatest
   HostName dagda.grainger.uiuc.edu
 
+Host lilypad
+  HostName tesseract.cites.uiuc.edu
+
 ### Personal
 Host blog
   HostName bill-ingram.com
