--- a/files/.ssh/config
+++ b/files/.ssh/config
@@ -5,43 +5,54 @@ ControlPersist 4h
 ### IDEALS
 Host sau luk
   HostName %h.cites.illinois.edu
+  User wingram2
 
 ### ETD
 Host mercury minerva
   HostName %h.cites.illinois.edu
+  User wingram2
 
 ### Connections
 Host sophia athena
   HostName %h.cites.illinois.edu
+  User wingram2
 
 #### Wiki
 Host juno ceres nidavell nidavell-dev
   HostName %h.cites.illinois.edu
+  User wingram2
 
 ### UIC ETD
 Host uic1
   HostName vireo-lib-1.cc.uic.edu
+  User wingram2
 
 Host uic2
   HostName vireo-lib-2.cc.uic.edu
+  User wingram2
 
 ### Grainger
 Host djatoka bamboo oreo
   HostName %h.grainger.uiuc.edu
+  User wingram2
 
 ### Jenkins
 Host jenkins
   HostName camazotz.grainger.uiuc.edu
+  User wingram2
  
 ### Medusa
 Host medusa
   Hostname stribog.grainger.uiuc.edu
+  User wingram2
 
 Host medusatest
   HostName dagda.grainger.uiuc.edu
+  User wingram2
 
 Host lilypad
   HostName tesseract.cites.uiuc.edu
+  User wingram2
 
 ### Personal
 Host blog
