update tmux.conf for zsh

--- a/files/.tmux.conf
+++ b/files/.tmux.conf
@@ -1,6 +1,12 @@
 # Our .tmux.conf file
 # Modified version from Brian Hogan's great PragProg book 
 
+# I use z-shell
+# START:zsh
+set -g default-command /bin/zsh
+set -g default-shell /bin/zsh
+# END:zsh
+
 # Setting the prefix from C-b to C-a
 # START:prefix
 set -g prefix C-a  
