--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "files/.emacs.d/elisp/org-mode"]
 	path = files/.emacs.d/elisp/org-mode
 	url = git://repo.or.cz/org-mode.git
+[submodule "modules/zsh-completions"]
+	path = modules/zsh-completions
+	url = git://github.com/zsh-users/zsh-completions.git
