various and sundry

--- a/files/.ssh/config
+++ b/files/.ssh/config
@@ -13,7 +13,7 @@ Host mercury minerva
   User wingram2
 
 ### Connections
-Host sophia athena
+Host sophia athena saga saga-dev
   HostName %h.cites.illinois.edu
   User wingram2
 
@@ -32,8 +32,12 @@ Host uic2
   User wingram2
 
 ### Grainger
-Host djatoka bamboo oreo
+Host djatoka bamboo oreo ramman  
   HostName %h.grainger.uiuc.edu
+  User wingram2
+
+Host osgi
+  HostName chihsung-tzu.grainger.uiuc.edu 
   User wingram2
 
 ### Jenkins
