--- a/files/.tmux.conf
+++ b/files/.tmux.conf
@@ -1,179 +1,82 @@
-# Our .tmux.conf file
-# Modified version from Brian Hogan's great PragProg book 
+# My .tmux.conf file, optimized for irssi
 
-# I use z-shell
-# START:zsh
+# Use z-shell
 set -g default-command /bin/zsh
 set -g default-shell /bin/zsh
-# END:zsh
-
-# Setting the prefix from C-b to C-a
-# START:prefix
-set -g prefix C-a  
-# END:prefix
-
-# Free the original Ctrl-b prefix keybinding
-# START:unbind
-unbind C-b 
-# END:unbind
-
-#setting the delay between prefix and command
-# START:delay
-set -sg escape-time 1
-# END:delay
-
-# Ensure that we can send Ctrl-A to other apps
-# START:bind_prefix
-bind C-a send-prefix
-# END:bind_prefix
-
-# Set the base index for windows to 1 instead of 0
-# START:index
-set -g base-index 1
-# END:index
-
-# Set the base index for panes to 1 instead of 0
-# START:panes_index
-setw -g pane-base-index 1
-# END:panes_index
 
 # Reload the file with Prefix r
-# START:reload
 bind r source-file ~/.tmux.conf \; display "Reloaded!"
-# END:reload
-
-# splitting panes
-# START:panesplit
-bind | split-window -h
-bind - split-window -v
-# END:panesplit
-
-# moving between panes
-# START:paneselect
-bind h select-pane -L 
-bind j select-pane -D 
-bind k select-pane -U
-bind l select-pane -R    
-# END:paneselect
-
-# Quick pane selection
-# START:panetoggle
-bind -r C-h select-window -t :-
-bind -r C-l select-window -t :+
-# END:panetoggle
-
-# Pane resizing
-# START:paneresize
-bind -r H resize-pane -L 5 
-bind -r J resize-pane -D 5 
-bind -r K resize-pane -U 5 
-bind -r L resize-pane -R 5
-# END:paneresize
-
-# mouse support - set to on if you want to use the mouse
-# START:mouse
-setw -g mode-mouse off 
-# END:mouse
-set -g mouse-select-pane off 
-set -g mouse-resize-pane off 
-set -g mouse-select-window off
-
-# Set the default terminal mode to 256color mode
-# START:termcolor
-set -g default-terminal "screen-256color"
-# END:termcolor
-
-# enable activity alerts
-#START:activity
-setw -g monitor-activity on
-set -g visual-activity on
-#END:activity
-
-# set the status line's colors
-# START:statuscolor
-set -g status-fg white
-set -g status-bg black
-# END:statuscolor
-
-# set the color of the window list
-# START:windowstatuscolor
-setw -g window-status-fg cyan 
-setw -g window-status-bg default 
-setw -g window-status-attr dim
-# END:windowstatuscolor
-
-# set colors for the active window
-# START:activewindowstatuscolor
-setw -g window-status-current-fg white 
-setw -g window-status-current-bg red 
-setw -g window-status-current-attr bright
-# END:activewindowstatuscolor
-
-# pane colors
-# START:panecolors
-set -g pane-border-fg green
-set -g pane-border-bg black
-set -g pane-active-border-fg white
-set -g pane-active-border-bg yellow
-# END:panecolors
-
-# Command / message line
-# START:cmdlinecolors
-set -g message-fg white
-set -g message-bg black
-set -g message-attr bright
-# END:cmdlinecolors
-
-# Status line left side
-# START:statusleft
-set -g status-left-length 40 
-set -g status-left "#[fg=green]Session: #S #[fg=yellow]#I #[fg=cyan]#P"
-# END:statusleft
-
-#START:utf8
-set -g status-utf8 on
-#END:utf8
-
-# Status line right side
-# 15% | 28 Nov 18:15
-# START: statusright
-set -g status-right "#(~/battery Discharging) | #[fg=cyan]%d %b %R"
-# END:statusright
-
-# Update the status bar every sixty seconds
-# START:updateinterval
-set -g status-interval 60
-# END:updateinterval
-
-# Center the window list
-# START:centerwindowlist
-set -g status-justify centre
-# END:centerwindowlist
-
-# enable vi keys.
-# START:vikeys
-setw -g mode-keys vi
-# END:vikeys
-
-# Open panes in the same directory using the tmux-panes script 
-# START:tmuxpanes
-unbind v
-unbind n
-bind v send-keys " ~/tmux-panes -h" C-m
-bind n send-keys " ~/tmux-panes -v" C-m
-# END:tmuxpanes
-
-# Maximize and restore a pane
-# START:max
-unbind Up
-bind Up new-window -d -n tmp \; swap-pane -s tmp.1 \; select-window -t tmp
-# END:max
-# START:restore
-unbind Down
-bind Down last-window \; swap-pane -s tmp.1 \; kill-window -t tmp
-# END:restore
 
 # Log output to a text file on demand
-# START:pipe-pane
 bind P pipe-pane -o "cat >>~/#W.log" \; display "Toggled logging to ~/#W.log"
-# END:pipe-pane
+
+# command prefix to ctrl+space
+set -g prefix C-Space
+
+# bindings
+unbind-key C-b
+bind-key a send-prefix
+bind-key C-a last-window
+bind s split-window -v
+bind v split-window -h
+bind-key Tab select-pane -t :.+
+bind m command-prompt "split-window -h 'exec man %%'"
+bind R source-file ~/.tmux.conf
+bind k confirm-before "kill-window"
+bind-key -r    M-Up resize-pane -U
+bind-key -r  M-Down resize-pane -D
+bind-key -r  M-Left resize-pane -L
+bind-key -r M-Right resize-pane -R
+bind-key -r    C-Up resize-pane -U 5
+bind-key -r  C-Down resize-pane -D 5
+bind-key -r  C-Left resize-pane -L 5
+bind-key -r C-Right resize-pane -R 5
+
+# status bar
+set -g base-index 1
+set -g status-bg black
+set -g status-fg white
+set -g message-bg red
+set -g message-fg white
+set -g status-left '#[fg=white]#[bg=black] #S.#I.#P #[default]'
+set -g status-right "#(hostname)|#(uptime | awk -F: '{print $(NF\\)}' | sed s/' '//)|%F %R"
+set -g status-right-length 80
+
+# scrollback buffer n lines
+set -g history-limit 10240
+
+# General options
+set -g status-utf8 on
+set -g default-terminal screen-256color
+set -g status-keys vi
+set -g bell-action any
+set -g visual-bell on
+set -g set-titles on
+set -g set-titles-string '#S.#I.#P #W #T' # session.windowindex.paneindex windowname windowtitle
+set -g status-left '#[fg=white]#[bg=black] #S.#I.#P #[default]'
+set -g status-right "#(hostname)|#(uptime | awk -F: '{print $(NF\\)}' | sed s/' '//)|%F %R"
+set -g mouse-select-pane on
+
+# Scrolling with Shift-PageUp/Shift-PageDown
+set -g terminal-overrides 'xterm*:smcup@:rmcup@'
+set -g visual-activity on
+
+# Window options
+setw -g mode-keys vi
+setw -g mode-mouse on
+setw -g aggressive-resize on
+setw -g monitor-activity on
+setw -g window-status-bg black
+setw -g window-status-current-bg blue
+
+# disable auto renaming
+setw -g automatic-rename off
+setw -g alternate-screen on
+
+# session initialization
+new-session   -n shell
+new-window -d -n dev    -t :2
+new-window -d -n debug  -t :3
+new-window -d -n db     -t :4
+new-window -d -n ec2    -t :5
+new-window -d -n irssi  -t :6
