added zsh history search and syntax highlighting as submodules

--- a/.gitmodules
+++ b/.gitmodules
@@ -4,7 +4,12 @@
 [submodule "files/.emacs.d/elisp/org-mode"]
 	path = files/.emacs.d/elisp/org-mode
 	url = git://repo.or.cz/org-mode.git
-
 [submodule "files/.zsh/zsh-completions"]
 	path = files/.zsh/zsh-completions
 	url = git://github.com/zsh-users/zsh-completions.git
+[submodule "files/.zsh/zsh-syntax-highlighting"]
+	path = files/.zsh/zsh-syntax-highlighting
+	url = git://github.com/zsh-users/zsh-syntax-highlighting.git
+[submodule "files/.zsh/zsh-history-substring-search"]
+	path = files/.zsh/zsh-history-substring-search
+	url = git://github.com/zsh-users/zsh-history-substring-search.git
