various and sundry from Ubuntu

--- a/files/.ssh/config
+++ b/files/.ssh/config
@@ -3,32 +3,28 @@ ControlPath /tmp/ssh_mux_%h_%p_%r
 ControlPersist 4h
 
 ### IDEALS
-Host sau luk
+Host sau luk vanaheim vanaheim-dev
   HostName %h.cites.illinois.edu
-  User wingram2
+  User ideals-dspace
 
 ### ETD
-Host mercury minerva
+Host mercury minerva mimir mimir-dev
   HostName %h.cites.illinois.edu
-  User wingram2
+  User ideals-etd
 
 ### Connections
 Host sophia athena saga saga-dev
   HostName %h.cites.illinois.edu
-  User wingram2
+  User ideals-bibapp
 
 #### Wiki
 Host juno ceres nidavell nidavell-dev
   HostName %h.cites.illinois.edu
-  User wingram2
+  User ideals-wiki
 
-### UIC ETD
-Host uic1
-  HostName vireo-lib-1.cc.uic.edu
-  User wingram2
-
-Host uic2
-  HostName vireo-lib-2.cc.uic.edu
+### UIC
+Host vireo-lib-1 vireo-lib-2 dspace-staging-lib dspace-prod-lib
+  HostName %h.cc.uic.edu
   User wingram2
 
 ### Grainger
