add dspace testing server

--- a/files/.ssh/config
+++ b/files/.ssh/config
@@ -25,22 +25,26 @@ Host juno ceres nidavell nidavell-dev
 ### UIC
 Host vireo-lib-1 vireo-lib-2 dspace-staging-lib dspace-prod-lib
   HostName %h.cc.uic.edu
-  User wingram2
+  User uic-etd
 
 ### Grainger
-Host djatoka bamboo oreo ramman  
+Host djatoka bamboo oreo ramman chih-chiangfyu-ya
   HostName %h.grainger.uiuc.edu
   User wingram2
 
+Host dspace18
+  HostName chih-chiangfyu-ya.grainger.uiuc.edu
+  User wingram2
+
 Host osgi
-  HostName chihsung-tzu.grainger.uiuc.edu 
+  HostName chihsung-tzu.grainger.uiuc.edu
   User wingram2
 
 ### Jenkins
 Host jenkins
   HostName camazotz.grainger.uiuc.edu
   User wingram2
- 
+
 ### Medusa
 Host medusa
   Hostname stribog.grainger.uiuc.edu
